# mcps-one

./: .gitignore  DOCKER.md  LICENSE  MCP_SERVER_SETUP.md  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  pro-development-plan.md  start.bat  start.sh  startup_core.py  stop.bat  stop.sh  user-value-analysis.md  v1.0.1_development_plan.md
backend/: .env.example  .env.mcp.example  .gitignore  Dockerfile  MCP_CLIENT_SETUP.md  MCP_TOOL_DISCOVERY_README.md  README.md  __init__.py  alembic.ini  check_db.py  main.py  mcp_client_config.json  mcp_client_example.json  mcp_server_config.json  mcp_tools_config.json  pyproject.toml  requirements.txt  setup_uv.py  start_dynamic_mcp.py  start_mcp_proxy_server.py  start_mcp_server.py
backend/alembic/: env.py
backend/alembic/versions/: 2b4937531a92_add_performance_monitoring_models.py  443b0fdea619_initial_migration.py  52f6f740362d_add_users_table.py  add_startup_command_simple.py  b913facd5fe0_add_proxy_tables.py  b9a86d9c925c_add_last_error_field_to_mcp_tools_table.py  d0225625d590_add_last_error_at_to_mcp_tools.py
backend/app/: __init__.py  main.py  websocket.py
backend/app/api/: __init__.py  auth.py  auto_session.py  docs.py  fastmcp_proxy.py  logs.py  mcp_agent.py  mcp_http.py  mcp_proxy.py  mcp_unified.py  monitor.py  monitoring.py  proxy.py  sessions.py  system.py  tasks.py  tools.py  user.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  init_core.py  log_levels.py  service_registry.py  setup_core.py  unified_cache.py  unified_config_manager.py  unified_error.py  unified_logging.py
backend/app/models/: __init__.py  log.py  proxy.py  session.py  system.py  task.py  tool.py  user.py
backend/app/schemas/: __init__.py  auth.py  log.py  mcp_agent.py  mcp_proxy.py  session.py  system.py  task.py  tool.py  user.py
backend/app/services/: __init__.py  backup_service.py  log_service.py  mcp_agent_service.py  mcp_server.py  mcp_service.py  mcp_unified_service.py  session_service.py  system_service.py  task_service.py  tool_service.py  user_service.py
backend/app/services/base/: __init__.py  base_service.py  cache_service.py  error_handler.py
backend/app/services/integrations/: __init__.py  proxy_service.py  request_router.py  webhook_service.py
backend/app/services/mcp/: __init__.py  mcp_agent_service.py  mcp_proxy_server.py  mcp_server.py  mcp_service.py  mcp_unified_service.py
backend/app/services/sessions/: __init__.py  auto_session_service.py  session_service.py
backend/app/services/system/: __init__.py  log_service.py  process_manager.py  system_service.py
backend/app/services/tasks/: __init__.py  task_service.py
backend/app/services/tools/: __init__.py  tool_registry.py  tool_service.py
backend/app/services/users/: __init__.py  user_service.py  (+1 more)
backend/app/utils/: __init__.py  auth.py  error_handler.py  exceptions.py  helpers.py  jwt_utils.py  mcp_client.py  pagination.py  process_manager.py  process_monitor.py  response.py  validators.py  websocket_manager.py
backend/config/: app.yaml
backend/scripts/: update_imports.py
backend/tests/: conftest.py
(+93 files in other folders)
